# tettyris

./: CMakeLists.txt  Makefile  README.MD  decl.h  glob.c  log.c  main.c  pcs.c  ren.c  winset.bat
